fix: remove unused imports and improve Windows path handling
Major code quality fixes from code review:

1. Remove unused imports:
   - ByteArrayOutputStream, LocalDateTime, ZoneId from DomainPdfSigningService
   - URI from HttpDocumentDownloadAdapter

2. Fix Windows path handling in LocalStorageAdapter:
   - Replace substring-based path extraction with Path.relativize()
   - Use java.io.File.separator instead of Path.of("/") for cross-platform compatibility
   - Fix log statements to reference correct variable